--- a/node-api-demo/package.json
+++ b/node-api-demo/package.json
@@ -18,6 +18,7 @@
     "http-status-codes": "^1.3.1",
     "morgan": "^1.7.0",
     "mysql": "^2.16.0",
+    "node-mysql-transaction": "^0.2.1",
     "pug": "^2.0.0-beta6",
     "serve-favicon": "^2.3.0"
   },
