unit test and student endpoint

--- a/node-api-demo/package.json
+++ b/node-api-demo/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+	"test": "mocha"
   },
   "description": "node-api-demo",
   "author": {
@@ -24,5 +25,10 @@
   },
   "engines": {
     "node": "~6.10.x"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^6.0.2"
   }
 }
